Show a toast when you've gone over the max media selection.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -440,6 +440,10 @@
 
     <!-- MediaPickerItemFragment -->
     <string name="MediaPickerItemFragment_tap_to_select">Tap to select</string>
+    <plurals name="MediaPickerItemFragment_cant_share_more_than_n_items">
+        <item quantity="one">You can\'t share more than %d item.</item>
+        <item quantity="other">You can\'t share more than %d items.</item>
+    </plurals>
 
     <!-- MediaSendActivity -->
     <string name="MediaSendActivity_add_a_caption">Add a caption...</string>
